--- a/src/components/ChatBox/Chatbox.css
+++ b/src/components/ChatBox/Chatbox.css
@@ -48,13 +48,35 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    /* border: 1px solid red; */
 }
 
 .message-input{
+    border: 1px solid rgb(34, 205, 248);
     height: 30px;
-    width: 200px;
+    width: 100%;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 4px;
+    outline-style: none;
+}
+
+.message-input:hover{
+    border: 1px solid rgb(20, 160, 196);
 }
 
 .send-btn{
-    height: 30px;
+    /* border: 1px solid rgb(0, 0, 0); */
+    height: 38px;
+    width: 100%;
+    padding: 5px;
+    margin: 4px;
+    outline-style: none;
+    border: 1px solid rgb(34, 205, 248);
+    border-radius: 10px;
+    font-weight: 200;
+}
+
+.send-btn:hover{
+    border: 1px solid rgb(20, 160, 196);
 }
